--- a/php/test/Dockerfile.php-7.4-V8
+++ b/php/test/Dockerfile.php-7.4-V8
@@ -1,4 +1,5 @@
-FROM wyga/v8-php-7.4-ext-buster:8.8 AS ext
+ARG _ver=8.8
+FROM wyga/v8-php-7.4-ext-buster:${_ver} AS ext
 FROM php:7.4-fpm
 COPY --from=ext / /
 RUN docker-php-ext-enable v8js
